--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,10 @@
 </head>
 
 <body>
-
+  <input type='hidden' id='year_2022' data-year2022='{{year_2022}}' />
+  <input type='hidden' id='year_2021' data-year2021='{{year_2021}}' />
+  <input type='hidden' id='year_2020' data-year2020='{{year_2020}}' />
+  <input type='hidden' id='year_2019' data-year2019='{{year_2019}}' />
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
@@ -21,28 +24,67 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-md-12">
         <div class="well">
-          <h5>Country:</h5>
-          <select id="selDataset">
-            {% for country in countries %}
-            <option value="{{country}}">{{country}}</option>
-            {% endfor %}
-
-        </select>
+          <div class="row">
+            <div class="col-md-6">
+              <h5>Year:</h5>
+              <select id="selYear" onchange="yearChanged(this.value)">
+                <!-- <option value="yr22">2022</option>
+                <option value="yr21">2021</option>
+                <option value="yr20">2020</option>
+                <option value="yr19">2019</option> -->
+              </select>
+            </div>
+          
+            <div class="col-md-6">  
+              <h5>Country:</h5>
+              <select id="selDataset" onchange="optionChanged(this.value)"></select>
+            </div>
+          </div>
         </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div id="bubble"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-8">
+        <div id="bar"></div>
+      </div>
+      <div class="col-md-4">
+        <div id="line"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div id="gaugeHappiness"></div>
+      </div>
+      <div class="col-md-4">
+        <div id="gaugeGDP"></div>
+      </div>
+      <div class="col-md-4">
+        <div id="gaugeSupport"></div>
+      </div>
+      <div class="col-md-4">
+        <div id="gaugeLife"></div>
+      </div>
+      <div class="col-md-4">
+        <div id="gaugeFreedom"></div>
       </div>
     </div>
   </div>
 
   <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
-  <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
-  <script>
-    var data = {{year_2022 | tojson}};
-    console.log(data);
-  </script>
-  <script src="../static/js/app.js"></script>
-  <!-- <script src="./static/js/bonus.js"></script> -->
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>  
+  <script src="{{ url_for('static', filename='js/gauge.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/bubble.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/bar.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/line.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+  <!-- <script src="{{ url_for('static', filename='js/gauge.js') }}"></script> -->
   
 </body>
 
