--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>World Happiness</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <!-- bootstrap stylesheet -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 
   <!-- CSS Stylesheet-->
-  <!-- <link rel ="stylesheet" href="static/css/style.css"> -->
+  <link rel ="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> 
 </head>
 
 <body>
@@ -18,59 +20,98 @@
   <input type='hidden' id='year_2021' data-year2021='{{year_2021}}' />
   <input type='hidden' id='year_2020' data-year2020='{{year_2020}}' />
   <input type='hidden' id='year_2019' data-year2019='{{year_2019}}' />
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>World Happiness Dashboard</h1>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="well">
-          <div class="row">
-            <div class="col-md-6">
-              <h5>Year:</h5>
-              <select id="selYear" onchange="yearChanged(this.value)"></select>
-            </div>
-          
-            <div class="col-md-6">  
-              <h5>Country:</h5>
-              <select id="selDataset" onchange="optionChanged(this.value)"></select>
-            </div>
-          </div>
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-md bg-custom navbar-dark">
+    <div class="container-fluid">
+
+        <!-- Navbar title or brand of the page; navbar made collapsible with a collapse button -->
+        <a class="navbar-brand" href="#">World Happiness</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navbar list to collapse on small screens -->
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+
+            <!-- Nav bar items moved to the right using ml-auto -->
+            <ul class="navbar-nav ml-auto">
+
+                <!-- Navbar menu items -->
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Data</a>
+                </li>
+            </ul>
         </div>
-      </div>
     </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div id="bubble"></div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-8">
-        <div id="bar"></div>
-      </div>
-      <div class="col-md-4">
-        <div id="line"></div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4">
-        <div id="gaugeHappiness"></div>
-      </div>
-      <div class="col-md-4">
-        <div id="gaugeGDP"></div>
-      </div>
-      <div class="col-md-4">
-        <div id="gaugeSupport"></div>
-      </div>
-      <div class="col-md-4">
-        <div id="gaugeLife"></div>
-      </div>
-      <div class="col-md-4">
-        <div id="gaugeFreedom"></div>
-      </div>
-    </div>
+  </nav>
+  
+  <!-- container to hold content below the navbar -->
+  <div class="bg-container">
+
+    <!-- Flexbox responsive two-column layout to display the map and bubble chart-->
+    <section class="two-column">
+        <div class="box">
+            <section class="two-row">
+
+                <!-- Dropdown menu for year -->
+                <div>
+                    <div class="name-block">
+                        <h5>Year:</h5>
+                    </div>
+                    <div class="menu">
+                        <select id="selYear" onchange="yearChanged(this.value)"></select>
+                    </div>
+                </div>
+
+                <!-- Map to be displayed based on the year selected -->
+                <div>
+                <div id="map">Map</div>
+                </div>
+            </section>
+        </div>
+
+        <!-- Bubble chart to be displayed based on the year selected -->
+        <div class="box">
+            <div id="bubble"></div>
+        </div>        
+    </section>
+
+    <!-- Flexbox responsive three-column layout to display the bar, line and gauge charts-->
+    <section class="three-column">
+
+        <!-- Bar chart to be displayed based on the year selected -->
+        <div class="box">
+            <div id="bar"></div>
+        </div>
+
+        <!-- line chart to be displayed based on the year selected -->
+        <div class="box">
+            <div id="line"></div>
+        </div>
+        <div class="box">
+            <section class="two-row">
+
+                <!-- Dropdown menu for country based on the year selected -->
+                <div>
+                    <div class="name-block">
+                        <h5>Country:</h5>
+                    </div>
+                    <div class="menu">
+                        <select id="selDataset" onchange="optionChanged(this.value)"></select>
+                    </div>
+                </div>
+
+                <!-- Gauge chart to be displayed based on the country and year selected -->
+                <div>
+                  <div id="gaugeHappiness"></div>
+                </div>
+            </section>
+        </div>        
+    </section>
   </div>
 
   <!-- Plotly Javascript file -->
@@ -82,6 +123,11 @@
   <script src="{{ url_for('static', filename='js/bar.js') }}"></script>
   <script src="{{ url_for('static', filename='js/line.js') }}"></script>
   <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+
+  <!-- Bootstrap javascript tags -->  
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     
 </body>
 
