--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,23 @@
   <!-- bootstrap stylesheet -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 
+  <!-- Leaflet JavaScript code -->
+  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+  integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+  crossorigin=""></script>
+  
+  <!-- Marker cluster JavaScript code -->
+  <script type="text/javascript" src="https://unpkg.com/leaflet.markercluster@1.0.3/dist/leaflet.markercluster.js"></script>
+
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+  integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+  crossorigin=""/>
+
+  <!-- Marker cluster CSS -->
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.css">
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.Default.css">
+
   <!-- CSS Stylesheet-->
   <link rel ="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> 
 </head>
@@ -54,6 +71,12 @@
 
     <!-- Flexbox responsive two-column layout to display the map and bubble chart-->
     <section class="two-column">
+
+        <!-- Map to be displayed based on the year selected -->
+        <div id="map-container" class="map-container">
+            <div id="map"></div>
+        </div>
+
         <div class="box">
             <section class="two-row">
 
@@ -67,17 +90,12 @@
                     </div>
                 </div>
 
-                <!-- Map to be displayed based on the year selected -->
-                <div>
-                <div id="map"></div>
-                </div>
+                <!-- Bubble chart to be displayed based on the year selected -->
+                <div class="box">
+                    <div id="bubble"></div>
+                </div>   
             </section>
-        </div>
-
-        <!-- Bubble chart to be displayed based on the year selected -->
-        <div class="box">
-            <div id="bubble"></div>
-        </div>        
+        </div>     
     </section>
 
     <!-- Flexbox responsive three-column layout to display the bar, line and gauge charts-->
@@ -117,13 +135,23 @@
   <!-- Plotly Javascript file -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>  
 
-  <!-- Javascript files -->
-  <script src="{{ url_for('static', filename='js/logic.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/gauge.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/bubble.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/bar.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/line.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+  <!-- Javascript file for Map -->
+  <script src="{{ url_for('static', filename='js/logic.js') }}"></script>   
+
+  <!-- Javascript file for Gauge Chart -->
+  <script src="{{ url_for('static', filename='js/gauge.js') }}"></script>   
+
+  <!-- Javascript file for Bubble Chart -->
+  <script src="{{ url_for('static', filename='js/bubble.js') }}"></script>  
+
+  <!-- Javascript file for Bar Chart -->
+  <script src="{{ url_for('static', filename='js/bar.js') }}"></script>     
+
+  <!-- Javascript file for Line Chart -->
+  <script src="{{ url_for('static', filename='js/line.js') }}"></script>    
+
+  <!-- Main Javascript file that calls the functions in other files -->
+  <script src="{{ url_for('static', filename='js/app.js') }}"></script>     
 
   <!-- Bootstrap javascript tags -->  
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
