--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
                 <!-- Dropdown menu for year -->
                 <div>
                     <div class="name-block">
-                        <h5>Year:</h5>
+                        <h5>Year</h5>
                     </div>
                     <div class="menu">
                         <select id="selYear" onchange="yearChanged(this.value)"></select>
@@ -116,7 +116,7 @@
                 <!-- Dropdown menu for country based on the year selected -->
                 <div>
                     <div class="name-block">
-                        <h5>Country:</h5>
+                        <h5>Country</h5>
                     </div>
                     <div class="menu">
                         <select id="selDataset" onchange="optionChanged(this.value)"></select>
