--- a/templates/index.html
+++ b/templates/index.html
@@ -55,12 +55,12 @@
             <ul class="navbar-nav ml-auto">
 
                 <!-- Navbar menu items -->
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Data</a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
